# unhttp

./: COPYRIGHT  Cargo.toml  LICENSE-APACHE  README.md
examples/: simple_get.rs
src/: client.rs  io.rs  lib.rs  request.rs  response.rs
src/io/: mod.rs  tcp.rs  tls.rs
